# pufbx

./: .gitignore  .mailmap  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  justfile  main.py  pyproject.toml  setup.py
.github/workflows/: build.yml
dev_utils/: watch_pyx.py
examples/: 01_load_scene.py  02_bake_rotation.py  03_anim_to_array.py  04_raw_curves.py
pufbx/: __init__.py  errors.py  pufbx.pxd  pufbx.pyi  scene.pxd  scene.pyx  ufbx_wrapper.pyx
pufbx/animation/: __init__.py  anim.pxd  anim.pyx  anim_curve.pxd  anim_curve.pyx  anim_stack.pxd  anim_stack.pyx  bake_anim.pxd  bake_anim.pyx  keyframe.pxd  keyframe.pyx
pufbx/audio/: audio_clip.pxd  audio_layer.pxd  audio_layer.pyx
pufbx/core/: __init__.py  math_types.pyx  raise_ufbx_error.pxi  strings.pxi  transform.pxd
pufbx/elements/: blend_channel.pxd  blend_channel.pyx  blend_deformer.pxd  blend_deformer.pyx  blend_shape.pxd  blend_shape.pyx  bone.pxd  bone.pyx  cache_deformer.pxd  cache_deformer.pyx  cache_file.pxd  cache_file.pyx  camera.pxd  camera.pyx  camera_switcher.pxd  camera_switcher.pyx  character.pxd  character.pyx  constraint.pxd  constraint.pyx  display_layer.pxd  display_layer.pyx  element.pxd  element.pyx  empty.pxd  empty.pyx  light.pxd  light.pyx  line_curve.pxd  line_curve.pyx  lod_group.pxd  lod_group.pyx  marker.pxd  marker.pyx  mesh.pxd  mesh.pyx  metadata_object.pxd  metadata_object.pyx  node.pxd  node.pyx  (+22 more)
pufbx/enums/: __init__.py  element_types.py  enums.py
pufbx/materials/: material.pxd  material.pyx  shader.pxd  shader.pyx  shader_binding.pxd  shader_binding.pyx  texture.pxd  texture.pyx  texture_file.pxd  texture_file.pyx  video.pxd  video.pyx
pufbx/props/: prop.pxd  prop.pyx
pufbx/utils/: generate_list.py  generate_wrappers.py
pyufbx/: __init__.py  generated_lists.pxi  pyufbx.c  scene.pxd  scene.pyx  ufbx_wrapper.pyx
pyufbx/animation/: __init__.py  anim.pxd  anim.pyx  anim_curve.pxd  anim_curve.pyx  anim_stack.pxd  anim_stack.pyx  bake_anim.pxd  bake_anim.pyx  curve.pyx  keyframe.pxd
pyufbx/audio/: audio_clip.pxd  audio_clip.pyx  audio_layer.pxd  audio_layer.pyx
pyufbx/core/: __init__.py  math_types.pxd  math_types.pxi  math_types.pyx  strings.pxi  transform.pxd  transform.pyx
pyufbx/elements/: __init__.py  blend_channel.pxd  blend_channel.pyx  blend_deformer.pxd  blend_deformer.pyx  blend_shape.pxd  (+60 more)
src/: enums.pxi  generated_wrappers.pxi  pyufbx.c  pyufbx.pxd  pyufbx.pyi  pyufbx.pyx  pyufbxbck.pxd
tests/: conftest.py  test_animation.py  test_bake_anim.py  test_node.py  test_properties.py  test_quad.py  test_thread_safety.py  test_vec3.py
(+27 files in other folders)
