[build-system]
requires = ["setuptools>=61.0", "wheel", "Cython>=3.0"]
build-backend = "setuptools.build_meta"


[project]
name = "pyufbx"
version = "0.1.0"
description = "Fast, Pythonic, and reliable bindings for the ufbx FBX loader"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[dependency-groups]
dev = [
    "cython>=3.2.1",
]
