# pyproject.toml
[build-system]
requires = ["setuptools>=61.0", "cython>=3.0", "numpy>=1.20"]
build-backend = "setuptools.build_meta"

[project]
name = "pyufbx"
version = "0.1.0"
description = "Python bindings for ufbx FBX loader"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.cython]
language_level = 3