[build-system]
requires = ["setuptools>=61.0", "cython>=3.0", "numpy>=1.20"]
build-backend = "setuptools.build_meta"

[project]
name = "pufbx"
version = "0.1.0"
description = "Fast, Pythonic bindings for the ufbx FBX file loader"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Andrzej Weremczuk", email = "masterxsido@gmail.com"},
]
keywords = ["fbx", "3d", "animation", "ufbx", "cython", "gamedev", "scene-graph"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Cython",
    "Topic :: Multimedia :: Graphics :: 3D Modeling",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "numpy>=1.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black",
    "isort",
    "autopep8",
]

[project.urls]
Homepage = "https://github.com/Owca-Xsido/pufbx"
Repository = "https://github.com/Owca-Xsido/pufbx"
Issues = "https://github.com/Owca-Xsido/pufbx/issues"

[tool.setuptools.packages.find]
where = ["."]

[tool.cython]
language_level = 3

[tool.black]
line-length = 120
target-version = ["py39"]

[tool.isort]
profile = "black"
line_length = 120

[tool.pytest.ini_options]
testpaths = ["tests"]
